# ghc-issue-9277

./: Makefile  README.md  ghci-fail-one.cabal
cbits/: glue.h  glue.m
src/: ghci-fail-one.hs
